# yaml-metadata

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  __init__.py  pyproject.toml  requirements.txt  setup.py  tasks.py  yamlmetadata.py
.github/workflows/: main.yml
pelican/plugins/yaml_metadata/: __init__.py  yaml_metadata.py
